# eficas

./: CMakeLists.txt  README  SalomeEFICASConfig.cmake.in
adm_local/: CMakeLists.txt
adm_local/cmake_files/: CMakeLists.txt  FindSalomeEFICAS.cmake
doc/: CMakeLists.txt  conf.py.in  eficas_for_Aster.rst  eficas_in_salome.rst  eficas_personnalisation.rst  eficas_presentation.rst  eficas_principles.rst  eficas_rules.rst  index.rst  python_rules.rst
idl/: CMakeLists.txt  EFICAS_Gen.idl
resources/: CMakeLists.txt  EFICASCatalog.xml.in  SalomeApp.xml.in  Vide.xcf  eficas.xcf  eficasAdao.xcf  eficasCF.xcf  eficasCarmel3D.xcf  eficasMAP.xcf  eficasMT.xcf  eficasSEP.xcf  eficasSPECA.xcf  eficasTelemac.xcf
src/: CMakeLists.txt  TestsEltsVisu.tgz
src/CONFIG/: CMakeLists.txt  eficasConfig.py
src/EFICAS/: CMakeLists.txt  EFICAS.py  EFICAS_SalomeSessionless.py  __init__.py
src/EFICASGUI/: CMakeLists.txt  EFICASGUI.py  EFICAS_msg_en.po  EFICAS_msg_en.ts  EFICAS_msg_fr.ts  EFICAS_msg_ja.ts  colors.py  eficasSalome.py  eficas_etude.py
src/STUDY/: CMakeLists.txt  EficasStudy.py
